Set category and post of Unity

--- a/_posts/CodingTest/Programmers/2022-11-16-[Hash]-베스트앨범.md
+++ b/_posts/CodingTest/Programmers/2022-11-16-[Hash]-베스트앨범.md
@@ -11,13 +11,15 @@ toc: true
 toc_sticky: true
  
 date: 2022-11-16
-last_modified_at: 2022-11-16
+last_modified_at: 2022-11-18
 
 ---
 ```
-하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다. 
-잘못되거나 고쳐할 부분이 있다면 지적 부탁드립니다! 감사합니다
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다! 감사합니다🙂
 ```
+
+[코딩테스트 연습__해시__베스트앨범](https://school.programmers.co.kr/learn/courses/30/lessons/42579)
 
 ## 문제
 ![screencapture-school-programmers-co-kr-learn-courses-30-lessons-42579-2022-11-16-16_51_00](https://user-images.githubusercontent.com/67769404/202121133-bf077acb-70c3-472d-afd0-026cc2be1118.png)
