--- a/_posts/CodingTest/Programmers/2022-11-16-[Hash]-베스트앨범.md
+++ b/_posts/CodingTest/Programmers/2022-11-16-[Hash]-베스트앨범.md
@@ -16,7 +16,8 @@ last_modified_at: 2022-11-18
 ---
 ```
 하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
-잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다! 감사합니다🙂
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
 ```
 
 [코딩테스트 연습__해시__베스트앨범](https://school.programmers.co.kr/learn/courses/30/lessons/42579)
