--- a/_posts/CodingTest/Boj/2022-11-15-[stack].md
+++ b/_posts/CodingTest/Boj/2022-11-15-[stack].md
@@ -16,10 +16,10 @@ last_modified_at: 2022-11-15
 ---
 
 
-## 위 형식을 참고하여 블로그를 커스텀하시오
+## 오늘 한 거
+- 영어
+  - 단어 1강 10개
 
-`-` 게시물 업로드 양식
 
-## 위 형식을 참고하여 블로그를 커스텀하시오
-
-게시물 업로드 양식
+## 반성할 점
+오늘 정말 누워만있었다 롤체 접고싶다. 다짐 ㅇ라미랑ㄹ
