--- a/_posts/Unity/UnityStudy/2022-11-28-C#Basis.md
+++ b/_posts/Unity/UnityStudy/2022-11-28-C#Basis.md
@@ -10,8 +10,8 @@ tags:
 toc: true
 toc_sticky: true
  
-date: 2022-11-21
-last_modified_at: 2022-11-24
+date: 2022-11-28
+last_modified_at: 2022-11-29
 
 ---
 ```
@@ -26,7 +26,7 @@ last_modified_at: 2022-11-24
 
 ## C# 프로그래밍
 ## 변수 - Variable (int, float, string, bool)
-- 변수 : 데이터를 메모리에 저장하는 공간  **( 선언 > 초기화 > 호출(사용) )**
+- 변수 : 데이터를 메모리에 저장하는 공간  **( 선언 -> 초기화 -> 호출(사용) )**
     ```c#
     int level = 100;
     float strength = 5.5f;
@@ -66,15 +66,15 @@ last_modified_at: 2022-11-24
     items.Add("Sword");  // items 리스트 0번째 인덱스 위치에 추가됨
     items.Add("Potion"); // items 리스트 1번째 인덱스 위치에 추가됨
     // 현상태) items = ["Sword", "Potion"]
-    //
+    -
     items.RemoveAt(0);   // items 리스트의 0번째 인덱스에 위치한 아이템을 제거
     // 현상태) items = ["Potion"]
     // "Sword"가 삭제되면서 앞으로 땡겨지고 "Potion"이 0번째 인덱스에 위치하게됨
-    //
-    Debug.Log(items[1]) // *오류 발생* 리스트 범위 밖 아이템 호출
+    -
+    // Debug.Log(items[1]) // *오류 발생* 리스트 범위 밖 아이템 호출
     ```
     `List<데이터타입> 변수명 = new List<데이터타입>();`와 같이 선언해줄 수 있다<br>
-    *배열과 달리 리스트는 가변적으로 **아이템을 추가, 삭제**를 할 수 있다*
+    *배열과 달리 리스트는 **<u>가변적</u>**으로 **아이템을 <u>추가, 삭제</u>**<u> 할 수 있다</u>*
 
 ## 연산자 - Operator
 - 연산자 : 상수, 변수 값을 연산해주는 기호
@@ -122,7 +122,7 @@ last_modified_at: 2022-11-24
     int float = 13.3f; // 불가능 -> 오류 발생
     string str = List; // 불가능 -> 오류 발생
     ```
-    ***키워드는 변수이름 및 값으로 사용할 수 없다***
+    ***키워드는 변수이름 및 값으로 <u>사용할 수 없다</u>***
 
 ## 조건문 - Conditional (if-else, switch-case)
 - 조건문 if, else if, else
@@ -180,7 +180,7 @@ last_modified_at: 2022-11-24
         }
     }
     ```
-    - **while(조건) { 로직 }** : 괄호 안 조건이 참(true)인 경우 로직 반복 실행<br>
+    - **`while(조건) { 로직 }`** : 괄호 안 조건이 참(true)인 경우 로직 반복 실행<br>
     
     위 코드에서는 health 값을 반복적으로 1씩 감소시키며 값이 10이 되었을 때 `break;`로 반복문을 종료한다.
 
@@ -193,7 +193,7 @@ last_modified_at: 2022-11-24
     // count가 0부터 "count < 10" 조건 파악 후 참인 경우 로직 실행 및 "count++" 연산을 하고 다시 조건 파악 순으로 반복한다
     
     ```
-    - **for(연산될 변수; 조건; 연산) { 로직 }** : 연산될 변수를 ***"조건 확인" -> "로직 실행" -> "연산"*** 순서대로 반복 실행하고 조건이 거짓(false)인 경우 반복이 멈춘다
+    - **`for(연산될 변수; 조건; 연산) { 로직 }`** : 연산될 변수를 ***"조건 확인" -> "로직 실행" -> "연산"*** 순서대로 반복 실행하고 조건이 거짓(false)인 경우 반복이 멈춘다
 
     <br>
     그룹형 변수와의 조합으로 for 반복문의 장점을 극대화할 수 있다
@@ -218,5 +218,157 @@ last_modified_at: 2022-11-24
     위 for 반복문의 그룹형 변수와의 조합 방식과 유사한 방식이다<br>
     foreach는 그룹형 변수를 가져와서 바로바로 변수로 가져다가 사용할 수 있다
 
-## 함수 - Function
+## 함수 - Function(=Method)
 - 함수 : 기능을 편리하게 재사용할 수 있도록 구성된 영역
+    ```c#
+    int Heal(int currentHealth) {
+        currentHealth += 10;
+        return currentHealth; // int형 health 변수 반환
+    }
+
+    void Start() {
+        int health = 30;
+        health = Heal(health); // 증가된 health를 리턴받는다
+        // 실제넣는 값(health)과 매개변수명(currentHealth)은 서로 같을 필요는 없다
+    }
+    ```
+    - **`반환타입 함수명(매개변수타입 매개변수명) { 로직 }`**
+        - `return` : 함수가 값을 반환해야할 때 사용하며 반환타입이 void인 경우는 없어도된다
+
+    <br>
+    위의 함수를 void 타입으로도 사용해보자
+    ```c#
+    public class NewBehaviourScript : MonoBehaviour
+    {
+        void Start() 
+        {
+            int health = 30; // 이곳에서 선언된 함수는 Heal() 내에서 접근 불가능
+        }
+        void Heal() 
+        {
+            health += 10
+        }
+    }
+    ```
+    - 지역변수 : 함수 안에서 선언된 변수 (해당 함수 내에서만 접근 가능)
+    - 전역변수 : 함수 바깥에 선언된 변수 (모든 함수에서 점근 가능)<br>
+    health라는 변수는 지역변수이기 때문에 `void Heal()` 함수내에서는 접근할 수가 없으므로 health 변수를 전역변수로 만들어주어야 한다.<br>
+
+    ```c#
+    public class NewBehaviourScript : MonoBehaviour
+    {
+        int health = 30; // 함수 바깥에 위치하도록 전역변수 health 선언(모든 함수에서 접근 가능)
+
+        void Start() 
+        {
+            // 기존 health 변수 제거
+        }
+        void Heal() 
+        {
+            health += 10 // health 변수 접근 가능
+        }
+    }
+    ```
+    위와 같이 전역변수로써 health를 바깥에 위치시켜주면 `void Heal()` 함수에서도 접근이 가능해진다
+
+## 클래스 - Class
+- 클래스 : 하나의 사물(오브젝트)와 대응하는 로직
+    <br>새로운 오브젝트 클래스를 만든 뒤 본 클래스 스크립트로 돌아와 새로만든 클래스의 객체를 생성해보자<br>
+    - 먼저 클래스를 사용하기 위해 `C# Script`를 하나 만들고 아래 코드와 같은 예시로 순수 클래스 내용을 적어본다
+
+    ```c#
+    public class Actor {
+        // private int id; (기본값) 다른 클래스에서 접근 불가능
+        public int id;
+        public string name;
+        public string title;
+        public string weapon;
+        public float strength;
+        public int level;
+        // public ~ 다른 클래스에서 접근 가능
+
+        public string Talk() // 함수 앞에도 public을 붙여 접근할 수 있도록 한다
+        {
+            return "대화를 걸었습니다.";
+        }
+        public string HasWeapon()
+        {
+            return weapon;
+        }
+        public void LevelUp()
+        {
+            level = level + 1;
+        }
+    } // 새롭게 만들고자 하는 오브젝트에 대응하는 class를 만든다
+    ```
+    - 변수 및 함수 등은 기본적으로 private이라는 접근자를 기본값으로 지닌다
+        - ***private*** : 외부 클래스에 **비공개**로 설정하는 접근자
+    - 아래 NewBehaviourScript에서 위 Actor 클래스 내 변수 or 함수에 접근하기 위해서는 Actor 클래스의 변수 or 함수 앞에 public 접근자를 붙여줘야한다
+        - ***public*** : 외부 클래스에 대한 접근을 **공개**로 설정하는 접근자
+    
+
+    ```c#
+    public class NewBehaviourScript : MonoBehaviour
+    {
+        void Start()
+        {
+            Actor player = new Actor(); // Actor 클래스 인스턴스화
+            player.id = 0;
+            player.name = "마법사";
+            player.title = "제목";
+            player.strength = 2.4f;
+            player.weapon = "나무 지팡이";
+            
+            Debug.Log(player.Talk());
+            Debug.Log(player.HasWeapon());
+
+            player.LevelUp();
+            Debug.Log(player.name + "의 레벨은 " + player.level + " 입니다");
+            // 모든 변수 및 함수를 public 접근자로 지정해주었기 때문에 값을 변경하거나 사용할 수 있게 된다
+        }
+    }
+    ```
+    - **`클래스명 변수명 = new 클래스명();`**  으로 인스턴스화(객체화) 시킨다
+        - 인스턴스 : 정의된 클래스를 변수 초기화로 실체화시키는 것
+
+- 상속
+    <br>위에서 만든 Actor는 Player가 될 수도 있고 Monster가 될 수도 있는 뼈대역할을 하는 클래스이다<br>
+    새로운 Player 클래스를 만들어서 Actor 클래스를 상속받아 사용해보자
+    - 먼저 Player라는 이름의 `C# Script`를 만들고 클래스를 작성해본다<br>
+
+    ```c#
+    public class Player : Actor {
+        public string move() {
+            return "플레이어가 움직이고 있습니다."
+        }
+    }
+    ```
+    - **`public class 클래스명 : 부모클래스명 { }`**  처럼 콜론을 붙여 부모 클래스로부터 상속을 받을 수 있다
+
+    ```c#
+    public class NewBehaviourScript : MonoBehaviour // MonoBehaviour 부모 클래스를 상속받음
+    {
+        void Start()
+        {
+            Player player = new Player(); // Actor 클래스를 상속받은 Player 클래스 인스턴스화
+            player.id = 0;
+            player.name = "마법사";
+            player.title = "제목";
+            player.strength = 2.4f;
+            player.weapon = "나무 지팡이";
+            
+            Debug.Log(player.Talk());
+            Debug.Log(player.HasWeapon());
+
+            player.LevelUp();
+            Debug.Log(player.name + "의 레벨은 " + player.level + " 입니다");
+            // Actor 클래스를 상속받았기 때문에 위처럼 부모 클래스의 모든 변수와 함수를 사용할 수 있다
+            Debug.Log(player.move()); // 자식 클래스 Player에서 새롭게 추가한 함수 사용
+        }
+    }
+    ```
+    자식 클래스는 부모 클래스 내 변수 및 함수들을 모두 사용할 수 있고 추가로 자신만의 변수 및 함수도 만들어 사용할 수 있다<br>
+    - MonoBehaviour : 유니티 게임 오브젝트 클래스
+        - 우리가 기본적으로 사용하던 본 클래스 함수는 MonoBehaviour라는 부모 클래스를 상속받았기 때문에 Start(), Update() 등 MonoBehaviour 클래스 내 기본적으로 선언되어있던 함수들을 가져다 사용했던 것이다
+
+<br>
