--- a/_posts/CodingTest/Boj/2022-11-25-1260.md
+++ b/_posts/CodingTest/Boj/2022-11-25-1260.md
@@ -14,7 +14,13 @@ date: 2022-11-25
 last_modified_at: 2022-11-25
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 1260번 - DFS와 BFS](https://www.acmicpc.net/problem/1260)
 
 ## 문제
 <img width="730" alt="111" src="https://user-images.githubusercontent.com/67769404/203951909-eb83a655-fa42-4f77-b50c-321cd9e9ae50.png">
