--- a/_posts/CodingTest/Boj/2022-11-26-10451.md
+++ b/_posts/CodingTest/Boj/2022-11-26-10451.md
@@ -14,7 +14,13 @@ date: 2022-11-26
 last_modified_at: 2022-11-26
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 10451번 - 순열 사이클](https://www.acmicpc.net/problem/10451)
 
 ## 문제
 <img width="703" alt="111" src="https://user-images.githubusercontent.com/67769404/204093653-942d6060-b095-4cf5-8599-f5f8eb88f20a.png">
