--- a/_posts/CodingTest/Boj/2022-11-27-2331.md
+++ b/_posts/CodingTest/Boj/2022-11-27-2331.md
@@ -14,7 +14,13 @@ date: 2022-11-27
 last_modified_at: 2022-11-27
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 2331번 - 반복수열](https://www.acmicpc.net/problem/2331)
 
 ## 문제
 <img width="876" alt="111" src="https://user-images.githubusercontent.com/67769404/204137941-a3988e08-b8a8-4ddb-92a1-91fa4b5381f1.png">
