--- a/_posts/CodingTest/Boj/2022-12-02-1991.md
+++ b/_posts/CodingTest/Boj/2022-12-02-1991.md
@@ -14,7 +14,13 @@ date: 2022-12-02
 last_modified_at: 2022-12-02
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 1991번 - 트리 순회](https://www.acmicpc.net/problem/1991)
 
 ## 문제
 <img width="800" alt="111" src="https://user-images.githubusercontent.com/67769404/205296901-958b2abd-39d8-4483-84d0-54fbe09e6708.png">
