--- a/_posts/CodingTest/Boj/2022-11-22-2745.md
+++ b/_posts/CodingTest/Boj/2022-11-22-2745.md
@@ -14,7 +14,13 @@ date: 2022-11-22
 last_modified_at: 2022-11-22
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 2745번 - 진법 변환](https://www.acmicpc.net/problem/2745)
 
 ## 문제
 <img width="878" alt="12345" src="https://user-images.githubusercontent.com/67769404/203337198-36c55fda-7eee-411a-b03a-b2f110757632.png">
