--- a/_posts/CodingTest/Boj/2022-11-23-1373.md
+++ b/_posts/CodingTest/Boj/2022-11-23-1373.md
@@ -14,7 +14,13 @@ date: 2022-11-23
 last_modified_at: 2022-11-23
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 1373번 - 2진수 8진수](https://www.acmicpc.net/problem/1373)
 
 ## 문제
 <img width="880" alt="12345" src="https://user-images.githubusercontent.com/67769404/203361252-dc8fb8b8-55ee-4e52-8cd0-2e499088b28d.png">
