--- a/_posts/CodingTest/Boj/2022-12-01-2756.md
+++ b/_posts/CodingTest/Boj/2022-12-01-2756.md
@@ -14,7 +14,13 @@ date: 2022-12-01
 last_modified_at: 2022-12-01
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 2146번 - 다리만들기](https://www.acmicpc.net/problem/2146)
 
 ## 문제
 <img width="812" alt="111" src="https://user-images.githubusercontent.com/67769404/205054145-7e04c6f4-b6ad-4dc8-a149-684f04b75c7e.png">
