--- a/_posts/CodingTest/Boj/2022-12-03-2178.md
+++ b/_posts/CodingTest/Boj/2022-12-03-2178.md
@@ -14,7 +14,13 @@ date: 2022-12-03
 last_modified_at: 2022-12-03
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 2178번 - 미로 탐색](https://www.acmicpc.net/problem/2178)
 
 ## 문제
 <img width="805" alt="111" src="https://user-images.githubusercontent.com/67769404/205445663-9bc2efce-c482-42ee-9a25-b9e31d6f722a.png">
