--- a/_posts/CodingTest/Boj/2022-12-09-1476.md
+++ b/_posts/CodingTest/Boj/2022-12-09-1476.md
@@ -14,7 +14,13 @@ date: 2022-12-09
 last_modified_at: 2022-12-09
 
 ---
+```
+하나씩 차근차근 개인적으로 공부한 것을 기록하는 블로그입니다.
+참고하시고 잘못되거나 고쳐야 할 부분이 있다면 지적 부탁드립니다!
+읽어주셔서 감사합니다🙂
+```
 
+[[Baekjoon Online Judge] 1476번 - 날짜 계산](https://www.acmicpc.net/problem/1476)
 
 ## 문제
 ![111](https://user-images.githubusercontent.com/67769404/206725039-d10e7d95-7024-4df8-b965-13468266f89e.png)
