--- a/_posts/Unity/UnityStudy/2022-11-18-vamsurlike01.md
+++ b/_posts/Unity/UnityStudy/2022-11-18-vamsurlike01.md
@@ -1,5 +1,5 @@
 ---
-title:  "[Unity 2D] 2D 오브젝트 만들기 및 스프라이트 설정" 
+title:  "[Unity 뱀서라이크] 2D 오브젝트 만들기 및 스프라이트 설정" 
 excerpt: "[골드메탈] 뱀서라이크 강좌 노트"
 
 categories:
