--- a/_posts/Unity/UnityStudy/2022-11-20-vamsurlike02(+).md
+++ b/_posts/Unity/UnityStudy/2022-11-20-vamsurlike02(+).md
@@ -1,5 +1,5 @@
 ---
-title:  "[Unity 2D] 새로운 Input System" 
+title:  "[Unity 뱀서라이크] 새로운 Input System" 
 excerpt: "[골드메탈] 뱀서라이크 강좌 노트"
 
 categories:
