Edit Title of Sql-solve category

--- a/_posts/SQL/SQL_Solve/2022-12-25-59034.md
+++ b/_posts/SQL/SQL_Solve/2022-12-25-59034.md
@@ -1,5 +1,5 @@
 ---
-title:  "[SQL 고득점 Kit] 모든 레코드 조회하기" 
+title:  "[SQL 고득점 Kit] (SELECT / ORDER BY) 모든 레코드 조회하기" 
 excerpt: "SQL Solving"
 
 categories:
@@ -54,7 +54,7 @@ SELECT * FROM ANIMAL_INS ORDER BY ANIMAL_ID
 
         SELECT ID, WIDTH, HEIGHT FROM TableName  -- 테이블의 ID, WIDTH, HEIGHT 칼럼을 선택
         ```
-<br>
+
 - **<u>ORDER BY</u>** : 특정 칼럼을 기준으로 오름차순 및 내림차순으로 정렬
     - `ORDER BY (Column) (ASC[= Default] / DESC)`
         - ASC(생략 시 기본값) : 오름차순 정렬
