--- a/_posts/SQL/SQL_Solve/2022-12-29-59404.md
+++ b/_posts/SQL/SQL_Solve/2022-12-29-59404.md
@@ -1,5 +1,5 @@
 ---
-title:  "[SQL 고득점 Kit] 여러 기준으로 정렬하기" 
+title:  "[SQL 고득점 Kit] (ORDER BY A, B,,) 여러 기준으로 정렬하기" 
 excerpt: "SQL Solving"
 
 categories:
@@ -9,7 +9,7 @@ tags:
 
 toc: true
 toc_sticky: true
- 
+
 date: 2022-12-29
 last_modified_at: 2022-12-29
 
