Update post's category

--- a/_posts/SQL/SQL_Solve/2023-01-07-59415.md
+++ b/_posts/SQL/SQL_Solve/2023-01-07-59415.md
@@ -5,7 +5,7 @@ excerpt: "SQL Solving"
 categories:
   - Sql-solve
 tags:
-  - [Coding Test, SQL, MAX]
+  - [Coding Test, SQL, SUM/MAX/MIN]
 
 toc: true
 toc_sticky: true
