--- a/_posts/Android/AndroidStudy/2022-12-21-study05.md
+++ b/_posts/Android/AndroidStudy/2022-12-21-study05.md
@@ -71,7 +71,7 @@ class BookAdapter: ListAdapter<Book, BookAdapter.BookItemViewHolder>(diffUtil) {
     }
 
     override fun onCreateViewHolder(parent: ViewGroup, viewType: Int): BookItemViewHolder {
-        return BookItemViewHolder(ItemBookBinding.inflate(LayoutInflater.from(parent.context), parent, false)
+        return BookItemViewHolder(ItemBookBinding.inflate(LayoutInflater.from(parent.context), parent, false))
     }
     override fun onBindViewHolder(holder: BookItemViewHolder, position: Int) {
         holder.bind(currentList[position])
@@ -80,17 +80,20 @@ class BookAdapter: ListAdapter<Book, BookAdapter.BookItemViewHolder>(diffUtil) {
     companion object {
         val diffUtil = object: DiffUtil.ItemCallback<Book>() {
             override fun areItemsTheSame(oldItem: Book, newItem: Book): Boolean {
-                return oldItem == newItem
+                return oldItem.id == newItem.id
             }
             override fun areContentsTheSame(oldItem: Book, newItem: Book): Boolean {
-                return oldItem.id == newItem.id
+                return oldItem == newItem
             }
         }
     }
 }
 ```
 
-만들어준 어댑터 클래스는 ListAdapter 상속을 받고 ListAdapter<> 안에 아이템들의 데이터를 다룰 데이터 클래스와 inner class로 생성할 ViewHolder 클래스를 작성해준다. 위 코드를 참고해서 같은 뼈대로 작성해주면 된다. 위 코드의 데이터 클래스 Book은 아래 코드와 같이 뷰 아이템에 넣어줄 정보를 저장해준다.
+만들어준 어댑터 클래스는 ListAdapter 상속을 받고 ListAdapter<> 안에 아이템들의 데이터를 다룰 데이터 클래스와 inner class로 생성할 ViewHolder 클래스를 작성해준다. 위 코드를 참고해서 같은 뼈대로 작성해주면 된다.<br>
+diffUtil 부분에 오버라이드 함수인 areItemsTheSame은 RecyclerView에 현재 노출되어 있는 아이템과 새롭게 재활용할 아이템이 같은지 확인하는 함수이고 보통 데이터의 각 고유한 값으로 비교한다. areContentsTheSame 함수는 노출되어 있는 아이템과 새로운 아이템이 같은지 equals를 확인하는 함수이다.<br>
+
+그리고 위 코드의 데이터 클래스 Book은 아래 코드와 같이 뷰 아이템에 넣어줄 정보를 저장해준다.
 
 ```kotlin
 data class Book(
