--- a/_posts/SQL/SQL_Solve/2023-01-17-59410.md
+++ b/_posts/SQL/SQL_Solve/2023-01-17-59410.md
@@ -36,7 +36,7 @@ last_modified_at: 2023-01-17
 각각 동물의 아이디, 생물 종, 보호 시작일, 보호 시작 시 상태, 이름, 성별 및 중성화 여부를 의미한다.
 
 <br><br>
-<u>보호소에서 몇 시에 입양이 가장 활발하게 일어나는지 0시부터 23시까지, 각 시간대별로 입양이 몇 건 발생했는지 조회하는 Sql문</u>을 작성해보자. 결과는 시간대 순으로 정렬하자.
+<u>동물의 생물 종, 이름, 성별 및 중성화 여부를 아이디 순으로 조회하고 이름이 없는 동물의 이름을 "No name"으로 표시하는 Sql문</u>을 작성해보자.
 
 <br><br><br>
 
