Update structure of category folder

--- a/_posts/LectureNotes/Nomad Coders/2023-01-15-vanillajs01.md
+++ b/_posts/LectureNotes/Nomad Coders/2023-01-15-vanillajs01.md
@@ -3,9 +3,9 @@ title:  "[Vanilla JS] 기초 문법 정리"
 excerpt: "Vanilla Js Study"
 
 categories:
-  - VanillaJs
+  - NomadCoders
 tags:
-  - [VanillaJs, Nomad Coders]
+  - [NomadCoders, VanillaJs]
 
 toc: true
 toc_sticky: true
