--- a/_posts/LectureNotes/Nomad Coders/2023-01-16-vanilla02.md
+++ b/_posts/LectureNotes/Nomad Coders/2023-01-16-vanilla02.md
@@ -3,9 +3,9 @@ title:  "[Vanilla JS] JS에서 HTML의 원하는 값 불러오기"
 excerpt: "Vanilla Js Study"
 
 categories:
-  - VanillaJs
+  - NomadCoders
 tags:
-  - [VanillaJs, Nomad Coders]
+  - [NomadCoders, VanillaJs]
 
 toc: true
 toc_sticky: true
