make up post of CSS Selector

--- a/_posts/LectureNotes/Nomad Coders/2023-01-16-vanilla02.md
+++ b/_posts/LectureNotes/Nomad Coders/2023-01-16-vanilla02.md
@@ -64,7 +64,9 @@ CSS 선택자 종류는 간단하게 아래와 같이 존재한다.
 - 속성 선택자 : [속성=값]  (해당 속성 값을 가진 요소 추출)
 - 후손 선택자 : 선택자1 선택자2  (선택자1 내부에 있는 선택자2 선택 추출)<br>
 
-이외에 더 많은 선택자가 존재하고 이는 추후에 차근차근 정리해보겠다.
+이외에 더 많은 선택자가 존재하고 이는 "About CSS" 게시글에 정리해두었다.
+<br>
 
+(+) [[프론트엔드] About CSS - 바로가기](https://0jnyng0.github.io/fastcampus/aboutCSS/)
 
 <br><br><br>
